--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Cheese!</h1>
 
 <% @products.each do |product| %>
-<h2>Item: <%= product.name %></h2><img src=<%= product.image %>>
+<h2>Item: <a href="/products/<%= product.id %>"><%= product.name %></a></h2><img src=<%= product.image %>>
 <p class="price">Price: $<%= product.price %></p>
 <p>Color: <%= product.color %></p>
 <p>Description: <%= product.description %></p>
