added background image

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -9,7 +9,20 @@ p.price {
   color: $item-color;
 }
 
-img {
-  height: 100px;
-  width: 100px;
+// img {
+//   height: 100px;
+//   width: 100px;
+// }
+
+body {
+  font-family: Palatino,"Palatino Linotype","Palatino LT STD","Book Antiqua",Georgia,serif;
+  background-image: url('cork-wallet.png');
+}
+
+.well{
+  height: 475px;
+}
+
+.well img {
+  width: 100%;
 }
