end of class, added stock

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,10 +1,14 @@
 <h1>Product</h1>
 
 <h2>Item: <%= @product.name %></h2><img src=<%= @product.image %>>
-<h5><%= @product.sale_message %></h5>
-<p>Price: $<%= @product.price %></p>
-<p>Tax: $<%= @product.tax %></p>
-<p class ="price">Total: $<%= @product.total %></p>
+<% if @product.discounted?  %>
+<h5>Discount item!</h5>
+<% else %>
+<h5>Everyday value!</h5>
+<% end %>
+<p>Price: <%= number_to_currency(@product.price) %></p>
+<p>Tax: <%= number_to_currency(@product.tax) %></p>
+<p class ="<%= "sale-item" if @product.discounted? %>">Total: <%= number_to_currency(@product.total) %></p>
 <p>Color: <%= @product.color %></p>
 <p>Description: <%= @product.description %></p>
 <p>------------------------------------------------</p>
