--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,8 +6,7 @@
       <div class="col-md-4">
         <div class="well">
           <h2>Item: <a href="/products/<%= product.id %>"><%= product.name %></a></h2><img src=<%= product.image %>>
-          <h5> <%= product.sale_message %></h5>
-          <p class="price">Price: $<%= product.price %></p>
+          <p>Price: <%= number_to_currency(product.price) %></p>
           <p>Color: <%= product.color %></p>
           <p>Description: <%= product.description %></p>
           <p>------------------------------------------------</p>
