--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,14 +22,20 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/products">Home <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="/products">Home</a></li>
             <li><a href="/products/new">New</a></li>
+            <li><a href="/products?discount=5">Discount Items</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="/products?sort=price">Price: Low to High</a></li>
+                <li><a href="/products?sort=price&sort_order=desc">Price: High to Low</a></li>
+                <li><a href="/products/random">Random!</a></li>
+                <li role="separator" class="divider"></li>
+                  <%= form_tag "/search", method: :post do %>
+                    <%= text_field_tag :search_term %>
+                    <%= submit_tag "Search" %>
+                  <% end %>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
                 <li role="separator" class="divider"></li>
@@ -50,7 +56,7 @@
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="#"></a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
               </ul>
