--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
     <% slice_product.each do |product| %>
       <div class="col-md-4">
         <div class="well">
-          <h2>Item: <a href="/products/<%= product.id %>"><%= product.name %></a></h2><img src=<%= product.image %>>
+          <h2>Item: <a href="/products/<%= product.id %>"><%= product.name %></a></h2><img src=<%= product.image.url %>>
           <p>Price: <%= number_to_currency(product.price) %></p>
           <p>Color: <%= product.color %></p>
           <p>Description: <%= product.description %></p>
