--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
                 <li><a href="/products?sort=price&sort_order=desc">Price: High to Low</a></li>
                 <li><a href="/products/random">Random!</a></li>
                 <li role="separator" class="divider"></li>
-                  <%= form_tag "/search", method: :post do %>
+                  <%= form_tag "/search", method: :get do %>
                     <%= text_field_tag :search_term %>
                     <%= submit_tag "Search" %>
                   <% end %>
@@ -50,13 +50,12 @@
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#"></a></li>
+                <li><a href="/signup">Create Account</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/logout">Logout</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
               </ul>
