--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -11,6 +11,12 @@
   <div>
     Color: <input type="text", name="color">
   </div>
+
+  <div>
+    <%= label_tag :supplier %>
+    <%= collection_select :supplier, :supplier_id, Supplier.all, :id, :name %>
+  </div>
+
   <div>
     Description: <input type="text", name="description">
   </div>
