--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,9 +53,12 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
+              <% if current_user %>
+                <li><a href="/logout">Logout</a></li>
+              <% else %>
                 <li><a href="/signup">Create Account</a></li>
                 <li><a href="/login">Login</a></li>
-                <li><a href="/logout">Logout</a></li>
+              <% end %>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
               </ul>
