--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
                 <li><a href="/login">Login</a></li>
               <% end %>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="/products?category=Aged">Separated link</a></li>
               </ul>
             </li>
           </ul>
