--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,6 +13,7 @@
 <p>Tax: <%= number_to_currency(@product.tax) %></p>
 <p class ="<%= "sale-item" if @product.discounted? %>">Total: <%= number_to_currency(@product.total) %></p>
 <p>Color: <%= @product.color %></p>
+<p>Categories: <%=  @product.categories.each { |category| p category.name }%>
 <p>Description: <%= @product.description %></p>
 <p>Supplier Name: <%= @product.supplier.name %></p>
 <p>------------------------------------------------</p>
