--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,8 +1,12 @@
 <h1>Order Successful!</h1>
 <h3>User email: <%= @order.user.email %></h3>
 <h2>Order ID: <%= "5827600#{@order.id}" %></h2>
-<h2>Product: <%= @order.product.name %></h2>
-<h2>Quantity: <%= @order.quantity %></h2>
+
+<% @purchased_orders.each do |purchased|  %>
+<h2>Product: <%= purchased.product.name %></h2>
+<h2>Quantity: <%= purchased.quantity %></h2>
+<% end %>
+
 <h2>Subtotal: <%= number_to_currency(@order.subtotal) %></h2>
 <h3>Tax: <%= number_to_currency(@order.tax) %></h3>
 <h2>Total: <%= number_to_currency(@order.total) %></h2>
