--- a/app/views/carted_products/index.html.erb
+++ b/app/views/carted_products/index.html.erb
@@ -1,15 +1,12 @@
 <h1>Your Cart</h1>
 
 <% @carted_products.each do |carted_product| %>
-  <h2><%= carted_product.product.name %></h2>
+  <h2><%= carted_product.product.name %> x <%= carted_product.quantity %></h2>
   <h3><%= carted_product.product.price %></h3>
-  <h3><%= carted_product.quantity %></h3>
-  <%= form_tag "/remove", method:  :get %>
+  <%= form_tag "/remove/#{carted_product.id}", method:  :post do %>
   <%= submit_tag "Remove Item" %>
   <% end %>
   <br>
 <% end %>
 
-<%= form_tag "/orders", method:  :post do %>
-  <%= submit_tag "Buy now!" %>
-<% end %>
+<%= link_to "Buy Now!", "/orders", method:  :post, class: "btn btn-default" %>
