--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,10 +25,10 @@
   <input class="btn btn-danger", type="submit", value="Delete Product">
 <% end %>
 
-<%=  form_tag "/cart", method:  :create do %>
+<%=  form_tag "/cart", method:  :post do %>
   <%= label_tag :quantity %>
   <%= text_field_tag :quantity %>
   <%= label_tag :product_id %>
-  <%= text_field_tag :product_id, @product.id %>
+  <%= hidden_field_tag :product_id, @product.id %>
   <%= submit_tag "Add to Cart" %>
 <% end %>
