cleaned up check out

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,9 +56,9 @@
               <% if current_user %>
                 <li><a href="/logout">Logout</a></li>
                 <% if carted_items %>
-                  <li><a href="/cart">Check out</a></li>
+                  <li><a href="/cart">Cart</a></li>
                 <% else %>
-                  <li><a href="/products">Check out</a></li>
+                  <li><a href="/products">Cart</a></li>
                 <% end %>
               <% else %>
                 <li><a href="/signup">Create Account</a></li>
