--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,23 +12,27 @@
 <p>Price: <%= number_to_currency(@product.price) %></p>
 <p>Tax: <%= number_to_currency(@product.tax) %></p>
 <p class ="<%= "sale-item" if @product.discounted? %>">Total: <%= number_to_currency(@product.total) %></p>
-<p>Color: <%= @product.color %></p>
-<p>Categories: <%=  @product.categories.each { |category| p category.name }%>
 <p>Description: <%= @product.description %></p>
 <p>Supplier Name: <%= @product.supplier.name %></p>
 <p>------------------------------------------------</p>
 
-<a class="btn btn-info", href="/products">Home</a><br>
-<a class="btn btn-info", href="/products/<%= @product.id %>/edit">Edit</a><br>
-<a class="btn btn-info", href="/products/<%= @product.id %>/images/new">Add Image</a>
-<%= form_tag "/products/#{@product.id}", method: :delete do %>
-  <input class="btn btn-danger", type="submit", value="Delete Product">
+  <a class="btn btn-info", href="/products">Home</a><br>
+<% if current_user && current_user.admin %>
+  <a class="btn btn-info", href="/products/<%= @product.id %>/edit">Edit</a><br>
+  <a class="btn btn-info", href="/products/<%= @product.id %>/images/new">Add Image</a>
+  <%= form_tag "/products/#{@product.id}", method: :delete do %>
+    <input class="btn btn-danger", type="submit", value="Delete Product">
+  <% end %>
 <% end %>
 
-<%=  form_tag "/cart", method:  :post do %>
-  <%= label_tag :quantity %>
-  <%= text_field_tag :quantity %>
-  <%= label_tag :product_id %>
-  <%= hidden_field_tag :product_id, @product.id %>
-  <%= submit_tag "Add to Cart" %>
+<% if current_user %>
+  <%=  form_tag "/cart", method:  :post do %>
+    <%= label_tag :quantity %>
+    <%= text_field_tag :quantity %>
+    <%= label_tag :product_id %>
+    <%= hidden_field_tag :product_id, @product.id %>
+    <%= submit_tag "Add to Cart" %>
+  <% end %>
+<% else %>
+  <h2>If you wish to purchase an item, please <%= link_to "login", "/login" %> or <%= link_to "create an account", "/signup" %></h2>
 <% end %>
